--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>🏴‍☠️ Laditya's web</title>
-        <link rel="stylesheet" href="css/1_code.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" href="image/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
