--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
             </div>
 
             <hr class="horizontal-row">
-            <h2>My Skills.</h2>
-
-
-                <div class="skill-row">
-                    <img class="CP-img" src="image/competitive programming.jpg" alt="skill-icon">
-                    <h3>Competitive Programming</h3>
-                    <p>it gives me the thrill of real sport. Actually, it's Competitive Programming, which teache me how to think?</p>
-                </div>
+            <h2>domains of interest</h2>
 
                 <div class="skill-row">
                     <img class="WB-img" src="image/laditya.jfif">
