--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 <div class="skill-row">
                     <img class="WB-img" src="image/laditya.jfif">
                     <h3>Web developement</h3>
-                    <p>it's awesome to be a web developer.</p>
+                    <p>it's awesome to be a web developer. Each distinct day gives an opportunity to learn, progress, and do the things that push me towards your goals or that make you satisfied at the end of the day</p>
                 </div>
 
                 <div class="skill-row">
                     <img class="CP-img" src="image/blockchain.webp" alt="blockchain">
                     <h3>Cryptography & Blockchain</h3>
-                    <p>WEB2 + WEB3 = WEB5</p>
+                    <p>WEB2 + WEB3 = WEB5. This is the future</p>
                 </div>
 
             <hr class="horizontal-row">
