--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
         <meta charset="utf-8">
         <title>🏴‍☠️ Laditya's web</title>
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="icon" href="image/favicon.ico">
+        <!-- <link rel="icon" href="image/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Sacramento&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <div class="top-container">
-            <img class="top-cloud" src="image/5_gif.webp"><br>
+            <img class="giffhy" src="image/5_gif.webp"><br>
             <h1>I'm Laditya</h1>
             <p>a <span class="pro">Pro</span>grammer</p>
             <p>WELCOME TO MY WEBSITE</p>
-            <img class="bottom-cloud" src="image/7_gif.webp">
-            <img class="mountain" src="image/hacker.png">          
         </div>
 
         <hr class="horizontal-row">
@@ -36,8 +35,8 @@
             <h2>domains of interest</h2>
 
                 <div class="skill-row">
-                    <img class="WB-img" src="image/laditya.jfif">
-                    <h3>Web developement</h3>
+                    <img class="WB-img" src="image/laditya.jfif" alt="blockchain">
+                    <h3>Cryptography & Blockchain</h3>
                     <p>it's awesome to be a web developer. Each distinct day gives an opportunity to learn, progress, and do the things that push me towards your goals or that make you satisfied at the end of the day</p>
                 </div>
 
@@ -58,9 +57,9 @@
         </div>
 
         <div class="bottom-container">
-            <a href="">linkedIn</a>
-            <a href="">git-hub</a>
-            <a href="">twitter</a>
+            <a class="btn" href="">linkedIn <i class="fa-brands fa-linkedin"></i></a>
+            <a class="btn" href="">git-hub <i class="fa-brands fa-github"></i></a>
+            <a class="btn" href="">twitter <i class="fa-brands fa-twitter"></i></a>
         </div>
 
     </body>
