--- a/index.html
+++ b/index.html
@@ -1,66 +1,19 @@
-<!--Personal Website-->
+<!-- portfolio website - by laditya -->
 
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
-        <title>🏴‍☠️ Laditya's web</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <!-- <link rel="icon" href="image/favicon.ico">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-        <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Sacramento&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
+        <title>Home | @gogoiladitya - Software Engineer</title>
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
 
     <body>
-        <div class="top-container">
-            <img class="giffhy" src="image/5_gif.webp"><br>
-            <h1>I'm Laditya</h1>
-            <p>a <span class="pro">Pro</span>grammer</p>
-            <p>WELCOME TO MY WEBSITE</p>
-        </div>
-
-        <hr class="horizontal-row">
-
-        <div class="middle-container">
-            <div class="profile">
-                <img src="image/profile_photo_web.jpg" alt="profile-picture">
-                <h2>Hello, Coders!</h2>
-                <p class="intro">I am a student of <strong>NIT-Silchar(Computer-Science-and-Engineering Branch)</strong>. I ❤ coding, Specially Competitive Programming and Web developement.</p>
-            </div>
-
-            <hr class="horizontal-row">
-            <h2>domains of interest</h2>
-
-                <div class="skill-row">
-                    <img class="WB-img" src="image/laditya.jfif" alt="blockchain">
-                    <h3>Cryptography & Blockchain</h3>
-                    <p>it's awesome to be a web developer. Each distinct day gives an opportunity to learn, progress, and do the things that push me towards your goals or that make you satisfied at the end of the day</p>
-                </div>
-
-                <div class="skill-row">
-                    <img class="CP-img" src="image/blockchain.webp" alt="blockchain">
-                    <h3>Cryptography & Blockchain</h3>
-                    <p>WEB2 + WEB3 = WEB5. This is the future</p>
-                </div>
-
-            <hr class="horizontal-row">
-  
-            <div class="contact-me">
-                <h2 class="getintouch">Get in touch</h2>
-                <h3>If you love Competitive Programming and developement as much as I do.</h3>
-                <p>Let's talk about how awesome they are! And Explore</p>
-                <a class="btn" href="mailto:gogoiladitya@gmail.com">CONTACT ME</a>
-            </div>
-        </div>
-
-        <div class="bottom-container">
-            <a class="btn" href="">linkedIn <i class="fa-brands fa-linkedin"></i></a>
-            <a class="btn" href="">git-hub <i class="fa-brands fa-github"></i></a>
-            <a class="btn" href="">twitter <i class="fa-brands fa-twitter"></i></a>
-        </div>
-
+        <ul id="grad">
+            <li style="float: left"><a href="#index.html">icon</a></li>
+            <li><a href="#portfolio.html">PORTFOLIO</a></li>
+            <li><a href="#blog.html">BLOG</a></li>
+            <li><a href="#contact.html">CONTACT</a></li>
+        </ul>
     </body>
 </html>
