--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <ul id="grad">
-            <li style="float: left"><a href="#index.html">icon</a></li>
+            <li style="float: left"><a class="active" href="#index.html">icon</a></li>
             <li><a href="#portfolio.html">PORTFOLIO</a></li>
             <li><a href="#blog.html">BLOG</a></li>
             <li><a href="#contact.html">CONTACT</a></li>
