--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <title>Home | @gogoiladitya - Software Engineer</title>
         <link rel="stylesheet" href="/css/styles.css">
+        <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -15,5 +16,36 @@
             <li><a href="#blog.html">BLOG</a></li>
             <li><a href="#contact.html">CONTACT</a></li>
         </ul>
+
+
+        <!-- top-container using grid -->
+
+
+
+
+        <div class="top-container">
+            <!-- greeting to the viewer -->
+            <div class="tcc1">
+                <h1>👋 HELLO ! </h1>
+                <h1>I'm Laditya Gogoi</h1>
+                <h1 class="software-engineer">$ Software Engineer</h1>
+                <a class="btn" href="">View Portfolio</a>
+                <a class="btn" href="">Get-In-Touch</a>
+
+            </div>
+
+            <!-- image and contact -->
+            <div class="tcc2">
+                <img id="profile-image" src="/image/profile_photo_web.jpg" alt="profile-image">
+                <div>
+                    <a class="icon" href=""><i class="fa-brands fa-linkedin fa-2x"></i></a>
+                    <a class="icon" href=""><i class="fa-brands fa-github fa-2x"></i></a>
+                    <a class="icon" href=""><i class="fa-brands fa-twitter fa-2x"></i></a>
+                </div>
+
+            </div>
+
+        </div>
+
     </body>
 </html>
