--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
         <ul id="grad">
             <li style="float: left"><a class="active" href="#index.html">icon</a></li>
-            <li><a href="#portfolio.html">PORTFOLIO</a></li>
-            <li><a href="#blog.html">BLOG</a></li>
             <li><a href="#contact.html">CONTACT</a></li>
+            <li><a href="#blog.html">BLOG</a></li>
+            <li><a href="#portfolio.html">PORTFOLIO</a></li>
         </ul>
 
 
@@ -29,8 +29,10 @@
                 <h1>👋 HELLO ! </h1>
                 <h1>I'm Laditya Gogoi</h1>
                 <h1 class="software-engineer">$ Software Engineer</h1>
-                <a class="btn" href="">View Portfolio</a>
-                <a class="btn" href="">Get-In-Touch</a>
+                <div class="btn-flex">
+                    <a class="btn" href="">View Portfolio</a>
+                    <a class="btn" href="">Get-In-Touch</a>
+                </div>
 
             </div>
 
@@ -45,6 +47,41 @@
 
             </div>
 
+        </div>
+
+
+        <!-- middle container -->
+        <div class="middle-container">
+            <h1 style="color: white">About me</h1>
+            <h3 class="about-me">I'm a front-end software engineer and student in the NIT Silchar. My mission is to build the future today and be surrounded by innovation. By working on both frontend and backend systems, I have experience with popular tools like React, TypeScript, Node.js, SQL, and MongoDB. Also, using Docker, GitHub Actions, AWS EC2, and Heroku, I love finding ways to automate my development, to test, build, and deploy.</h3>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 0 1440 100"><path fill="#3cb0fd" fill-opacity="1" d="M0,0L1440,96L1440,0L0,0Z"></path></svg>
+
+
+
+
+
+
+        <!-- skill-container  -->
+        <div class="skill-container">
+            <h2>My Tech Stack</h2>
+            <div class="skills">
+                <a class="btn" href="">HTML5</a>
+                <a class="btn" href="">CSS</a>
+                <a class="btn" href="">Java-Script</a>
+                <a class="btn" href="">jQuery</a>
+                <a class="btn" href="">Bootstrap</a>
+                <a class="btn" href="">node.js</a>
+                <a class="btn" href="">express.js</a>
+                <a class="btn" href="">svg</a>
+                <a class="btn" href="">git</a>
+
+            </div>
+        </div>
+
+        <!-- footer  -->
+        <div class="footer">
+            footer
         </div>
 
     </body>
