--- a/index.html
+++ b/index.html
@@ -50,12 +50,25 @@
         </div>
 
 
-        <!-- middle container -->
-        <div class="middle-container">
+        <!-- middle1 container -->
+        <div class="middle1-container">
+            <div class="custom-shape-divider-top-1669295804">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                    <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                    <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+                </svg>
+            </div>
             <h1 style="color: white">About me</h1>
             <h3 class="about-me">I'm a front-end software engineer and student in the NIT Silchar. My mission is to build the future today and be surrounded by innovation. By working on both frontend and backend systems, I have experience with popular tools like React, TypeScript, Node.js, SQL, and MongoDB. Also, using Docker, GitHub Actions, AWS EC2, and Heroku, I love finding ways to automate my development, to test, build, and deploy.</h3>
+            <div class="custom-shape-divider-bottom-1669295410">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                    <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                    <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+                </svg>
+            </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 0 1440 100"><path fill="#3cb0fd" fill-opacity="1" d="M0,0L1440,96L1440,0L0,0Z"></path></svg>
 
 
 
@@ -63,21 +76,44 @@
 
 
         <!-- skill-container  -->
-        <div class="skill-container">
-            <h2>My Tech Stack</h2>
-            <div class="skills">
-                <a class="btn" href="">HTML5</a>
-                <a class="btn" href="">CSS</a>
-                <a class="btn" href="">Java-Script</a>
-                <a class="btn" href="">jQuery</a>
-                <a class="btn" href="">Bootstrap</a>
-                <a class="btn" href="">node.js</a>
-                <a class="btn" href="">express.js</a>
-                <a class="btn" href="">svg</a>
-                <a class="btn" href="">git</a>
+        <div class="middle2-container">
+            <div class="skill-container">
+                <h1>My Tech Stack</h1>
+                <div class="skill-section">
+                    <div class="skill">
+                        <h2>javascript</h2>
+                        <i class="fa-brands fa-square-js fa-2x"></i>
+                    </div>
+                    <div class="skill">
+                        <i class="fa-brands fa-html5 fa-2x"></i>
+                        <h2>html:5</h2>
+                    </div>
+                    <div class="skill">
+                        <i class="fa-brands fa-css3-alt fa-2x"></i>
+                        <h2>CSS</h2>
+                    </div>
+                    <div class="skill">
+                        <i class="fa-brands fa-bootstrap fa-2x"></i>
+                        <h2>Bootstrap</h2>
+                    </div>
+                    <div class="skill">
+                        <i class="fa-solid fa-clipboard-question fa-2x"></i>
+                        <h2>jQuery</h2>
+                    </div>
+                    <div class="skill">
+                        <i class="fa-brands fa-node-js fa-2x"></i>
+                        <h2>node.js</h2>
+                    </div>
+                    <div class="skill">
+                        <i class="fa-solid fa-c fa-2x"></i>
+                        <h2>C++/C</h2>
+                    </div>
 
+                </div>
             </div>
         </div>
+
+        
 
         <!-- footer  -->
         <div class="footer">
