--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <!-- navbar -->
         <ul id="grad">
             <li style="float: left"><a class="active" href="#index.html">icon</a></li>
             <li><a href="#contact.html">CONTACT</a></li>
@@ -19,10 +20,6 @@
 
 
         <!-- top-container using grid -->
-
-
-
-
         <div class="top-container">
             <!-- greeting to the viewer -->
             <div class="tcc1">
@@ -72,9 +69,6 @@
 
 
 
-
-
-
         <!-- skill-container  -->
         <div class="middle2-container">
             <div class="skill-container">
@@ -115,6 +109,73 @@
 
 
 
+
+        <!-- portfolio (main projects) -->
+        <div class="middle3-container">
+            <h1>Portfolio</h1>
+            <a class="btn">view all</a>
+            <div class="project1">
+                <div class="description">
+                    <a class="project-heading" href="">Tindog Encounter <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione suscipit rerum voluptates excepturi veniam, maxime modi quae error iure vel vitae neque ducimus velit nostrum? Aliquam neque voluptatem dolorum consequuntur.</h4>
+
+                    <div class="description-btn">
+                        <a class="btn" href="">learn more</a>
+                        <a class="btn" href="">repository</a>
+                    </div>
+
+                </div>
+                <div class="project-img">
+                    <img style="width: 300px;" src="/image/black panther linkedin (2).jpg" alt="project-img">
+                </div>
+
+
+            </div>
+        </div>
+
+
+
+        <!-- more repository (rest projects) and meeting -->
+        <div class="middle4-container">
+            <div class="custom-shape-divider-top-1669295804">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                    <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                    <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+                </svg>
+            </div>
+            <div class="more-repo">
+                <a><i class="fa-brands fa-github fa-5x"></i></a>
+                <h1 style="margin: 0;">More Projects</h1>
+                <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga numquam provident soluta minus dolores consequatur odio molestiae accusamus quae dolore assumenda repellendus quidem quam doloribus, dolorem minima velit ea possimus.</h4>
+                <a class="btn">Open GitHub</a>
+
+            </div>
+
+            <div class="virtual-chat">
+                <a><i class="fa-solid fa-video fa-5x"></i></a>
+                <h1 style="margin: 0;">Book meeting</h1>
+                <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga numquam provident soluta minus dolores consequatur odio molestiae accusamus quae dolore assumenda repellendus quidem quam doloribus, dolorem minima velit ea possimus.</h4>
+                <a class="btn">Let's chat</a>
+            </div>
+            <div class="custom-shape-divider-bottom-1669295410">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                    <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                    <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+                </svg>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+        <!-- contact-form  -->
         <div class="form-container">
             <h1>Contact Me</h1>
             <h4>Want to work together or have any questions</h4>
@@ -145,7 +206,16 @@
 
         <!-- footer  -->
         <div class="footer">
-            footer
+            <div class="copyright">
+                <h4>built by Laditya Gogoi</h4>
+                <p>copyright@laditya</p>
+            </div>
+
+            <div class="social-media">
+                <a class="footer-icon" href=""><i class="fa-brands fa-linkedin fa-3x"></i></a>
+                <a class="footer-icon" href=""><i class="fa-brands fa-github fa-3x"></i></a>
+                <a class="footer-icon" href=""><i class="fa-brands fa-twitter fa-3x"></i></a>
+            </div>
         </div>
 
     </body>
