--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Home | @gogoiladitya - Software Engineer</title>
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
     </head>
 
