--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <!-- image and contact -->
             <div class="tcc2">
-                <img id="profile-image" src="/image/profile_photo_web.jpg" alt="profile-image">
+                <img id="profile-image" src="/PORTFOLIO-SITE/image/profile_photo_web.jpg" alt="profile-image">
                 <div>
                     <a class="icon" href=""><i class="fa-brands fa-linkedin fa-2x"></i></a>
                     <a class="icon" href=""><i class="fa-brands fa-github fa-2x"></i></a>
@@ -126,7 +126,7 @@
 
                 </div>
                 <div class="project-img">
-                    <img style="width: 300px;" src="/image/black panther linkedin (2).jpg" alt="project-img">
+                    <img style="width: 300px;" src="/PORTFOLIO-IMAGE/image/black panther linkedin (2).jpg" alt="project-img">
                 </div>
 
 
