--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <!-- navbar -->
         <ul id="grad">
             <li style="float: left"><a class="active" href="#index.html">icon</a></li>
-            <li><a href="#contact.html">CONTACT</a></li>
-            <li><a href="#blog.html">BLOG</a></li>
-            <li><a href="#portfolio.html">PORTFOLIO</a></li>
+            <li><a href="/PORTFOLIO-SITE/contact.html">CONTACT</a></li>
+            <li><a href="/PORTFOLIO-SITE/blog.html">BLOG</a></li>
+            <li><a href="/PORTFOLIO-SITE/portfolio.html">PORTFOLIO</a></li>
         </ul>
 
 
