--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Contact | @gogoiladitya - Software Engineer</title>
+        <title>Iblog | @gogoiladitya - Software Engineer</title>
         <link rel="stylesheet" href="/css/blog_styles.css">
         <link rel="stylesheet" href="/css/blog_utils.css">
         <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
@@ -16,17 +16,117 @@
             <div class="nav-left">
                 <h1>Iblog</h1>
                 <ul>
-                    <li><a>Home</a></li>
-                    <li><a>Contact</a></li>
-                    <li><a>About</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">About</a></li>
                 </ul>
             </div>
             <div class="nav-right">
-                <input type="text" placeholder="article search">
-                <button class="btn">Search</button>
+                <!-- <form action="/search.html" method="get"> -->
+                    <input type="text" placeholder="article search">
+                    <button class="btn">Search</button>
+                <!-- </form> -->
             </div>
         </nav> 
+
+
+        <!-- horizontal line -->
+        <hr class="horizontal-line max-width-1">
+
+
+
+
+
+        <!-- container no.1 -->
+        <div class="container-1 max-width-1 m-auto">
+            <div class="left">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam molestias quasi amet rerum inventore non quis, hic enim minus explicabo dicta quaerat, excepturi deserunt officia laboriosam maiores cum veritatis provident eum similique id molestiae odio. Fugiat minima dolor ut deserunt qui, ex tenetur sit, possimus, dignissimos porro accusamus placeat neque?</p>
+            </div>
+            <div class="right">
+                <img src="/image/musical_proj.jpg">
+            </div>
+        </div>
+
+
         
 
+        <!-- horizontal line -->
+        <hr class="horizontal-line max-width-1">
+
+
+
+
+        <div class="projects">
+            <h1></h1>
+        </div>
+
+
+        <!-- feature projects -->
+        <div class="project-container max-width-1 m-auto">
+            <h1>Feature Project</h1>
+
+            <!-- horizontal line -->
+            <hr class="horizontal-line max-width-1">
+
+            <div class="project">
+                <div class="project-photo">
+                    <img src="/image/project-photo.png">
+                </div>
+                <div class="project-description">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi amet molestias delectus aliquam? Sapiente quos voluptatem blanditiis consequuntur architecto distinctio libero a harum commodi repellat id sint, culpa perferendis laudantium. Pariatur, quia quaerat eligendi dolores assumenda ipsa necessitatibus non voluptatum perspiciatis beatae dolor, earum asperiores. Provident accusantium asperiores animi deserunt.</p>
+                    <h4>Programmer Name: laditya | 2/12/2022</h4>
+                </div>
+            </div>
+
+            <!-- horizontal line -->
+            <hr class="horizontal-line max-width-1">
+
+            <div class="project">
+                <div class="project-photo">
+                    <img src="/image/project-photo.png">
+                </div>
+                <div class="project-description">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur recusandae assumenda eligendi suscipit modi omnis nobis, dolorem sequi placeat iusto vitae possimus, provident nisi quam repudiandae atque accusantium fugiat molestiae fuga voluptas, quo natus eum. Aliquam culpa inventore quae nihil. Amet omnis velit eveniet molestiae minima nemo aliquid magnam repudiandae.</p>
+                    <h4>Programmer Name: laditya | 2/12/2022</h4>
+                </div>
+            </div>
+
+            <!-- horizontal line -->
+            <hr class="horizontal-line max-width-1">
+
+            <div class="project">
+                <div class="project-photo">
+                    <img src="/image/project-photo.png">
+                </div>
+                <div class="project-description">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur recusandae assumenda eligendi suscipit modi omnis nobis, dolorem sequi placeat iusto vitae possimus, provident nisi quam repudiandae atque accusantium fugiat molestiae fuga voluptas, quo natus eum. Aliquam culpa inventore quae nihil. Amet omnis velit eveniet molestiae minima nemo aliquid magnam repudiandae.</p>
+                    <h4>Programmer Name: laditya | 2/12/2022</h4>
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <!-- horizontal line -->
+        <hr class="horizontal-line max-width-1">
+
+
+
+
+
+        <!-- footer -->
+        <footer class="max-width-1 m-auto">
+            <div>
+                <h4>Built by Laditya</h4>
+                <p>copyright@ LG</p>
+            </div>
+            <div class="footer-social-icon">
+                <a class="footer-icon" href=""><i class="fa-brands fa-linkedin fa-3x"></i></a>
+                <a class="footer-icon" href=""><i class="fa-brands fa-github fa-3x"></i></a>
+                <a class="footer-icon" href=""><i class="fa-brands fa-twitter fa-3x"></i></a>
+            </div>
+        </footer>
     </body>
 </html>
