--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
     <head>
         <meta charset="utf-8">
         <title>Iblog | @gogoiladitya - Software Engineer</title>
-        <link rel="stylesheet" href="/css/blog_styles.css">
-        <link rel="stylesheet" href="/css/blog_utils.css">
+        <link rel="stylesheet" href="/PORTFOLIO-SITE/css/blog_styles.css">
+        <link rel="stylesheet" href="/PORTFOLIO-SITE/css/blog_utils.css">
         <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
     </head>
 
@@ -44,7 +44,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam molestias quasi amet rerum inventore non quis, hic enim minus explicabo dicta quaerat, excepturi deserunt officia laboriosam maiores cum veritatis provident eum similique id molestiae odio. Fugiat minima dolor ut deserunt qui, ex tenetur sit, possimus, dignissimos porro accusamus placeat neque?</p>
             </div>
             <div class="right">
-                <img src="/image/musical_proj.jpg">
+                <img src="/PORTFOLIO-SITE/image/musical_proj.jpg">
             </div>
         </div>
 
@@ -71,7 +71,7 @@
 
             <div class="project">
                 <div class="project-photo">
-                    <img src="/image/project-photo.png">
+                    <img src="/PORTFOLIO-SITE/image/project-photo.png">
                 </div>
                 <div class="project-description">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi amet molestias delectus aliquam? Sapiente quos voluptatem blanditiis consequuntur architecto distinctio libero a harum commodi repellat id sint, culpa perferendis laudantium. Pariatur, quia quaerat eligendi dolores assumenda ipsa necessitatibus non voluptatum perspiciatis beatae dolor, earum asperiores. Provident accusantium asperiores animi deserunt.</p>
@@ -84,7 +84,7 @@
 
             <div class="project">
                 <div class="project-photo">
-                    <img src="/image/project-photo.png">
+                    <img src="/PORTFOLIO-SITE/image/project-photo.png">
                 </div>
                 <div class="project-description">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur recusandae assumenda eligendi suscipit modi omnis nobis, dolorem sequi placeat iusto vitae possimus, provident nisi quam repudiandae atque accusantium fugiat molestiae fuga voluptas, quo natus eum. Aliquam culpa inventore quae nihil. Amet omnis velit eveniet molestiae minima nemo aliquid magnam repudiandae.</p>
@@ -97,7 +97,7 @@
 
             <div class="project">
                 <div class="project-photo">
-                    <img src="/image/project-photo.png">
+                    <img src="/PORTFOLIO-SITE/image/project-photo.png">
                 </div>
                 <div class="project-description">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur recusandae assumenda eligendi suscipit modi omnis nobis, dolorem sequi placeat iusto vitae possimus, provident nisi quam repudiandae atque accusantium fugiat molestiae fuga voluptas, quo natus eum. Aliquam culpa inventore quae nihil. Amet omnis velit eveniet molestiae minima nemo aliquid magnam repudiandae.</p>
