--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/PORTFOLIO-SITE/css/styles.css">
     <title>iPortfolio</title>
 </head>
 
@@ -14,7 +14,7 @@
             <nav>
                 <div>
                     <a href="index.html" class="logo">
-                        <img src="/images/logo.jpg" alt="logo">
+                        <img src="/PORTFOLIO-SITE//images/logo.jpg" alt="logo">
                     </a>
                 </div>
                 <ul class="menu">
