--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <script src="https://kit.fontawesome.com/ca79ff3647.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/PORTFOLIO-SITE/css/styles.css">
     <title>iPortfolio</title>
 </head>
 
@@ -14,7 +14,7 @@
             <nav>
                 <div>
                     <a href="index.html" class="logo">
-                        <img src="/images/logo.jpg" alt="logo">
+                        <img src="/PORTFOLIO-SITE/images/logo.jpg" alt="logo">
                     </a>
                 </div>
                 <ul class="menu">
@@ -215,7 +215,7 @@
                             <h2>iProduct</h2>
                             <span>Dark Mode</span>
                         </div>
-                        <img src="/images/iProduct.png" alt="project">
+                        <img src="/PORTFOLIO-SITE/images/iProduct.png" alt="project">
                     </div>
                 </a>
             </div>
@@ -226,7 +226,7 @@
                             <h2>iRealstate</h2>
                             <span>Business Site</span>
                         </div>
-                        <img src="/images/iProfessional.png" alt="project">
+                        <img src="/PORTFOLIO-SITE/images/iProfessional.png" alt="project">
                     </div>
                 </a>
                 <a href="#" class="card-link">
@@ -235,7 +235,7 @@
                             <h2>iWeather</h2>
                             <span>RealTime weather details</span>
                         </div>
-                        <img src="/images/iWeather.png" alt="project">
+                        <img src="/PORTFOLIO-SITE/images/iWeather.png" alt="project">
                     </div>
                 </a>
             </div>
@@ -284,7 +284,7 @@
 
     <section class="testimonials">
         <div class="container">
-            <img src="/images/user1.jpg" class="user-img" alt="user">
+            <img src="/PORTFOLIO-SITE/images/user1.jpg" class="user-img" alt="user">
             <div class="testimonial">
                 <i class="fas fa-quote-left fa-2x"></i>
                 <h2 class="user-text">
@@ -336,7 +336,7 @@
 
     <footer>
         <a href="index.html" class="logo">
-            <img src="/images/logo.jpg" width="500px" alt="logo">
+            <img src="/PORTFOLIO-SITE/images/logo.jpg" width="500px" alt="logo">
         </a>
         <h1>
             <b>Thanks for scrolling,</b>
@@ -361,7 +361,7 @@
         </ul>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="/PORTFOLIO/js/script.js"></script>
 </body>
 </html>
 
